src/test/deca/context/invalid/created/Objet/Passe_2/DifferentMethodReturnTypes.deca
// Description:
//    teste la redefinition de methode avec un nouveau return type
//    qui n'est pas une sous classe de l'initial
// Resultats:
//    Erreur contextuelle
//    Ligne 23 : Error: redefinition of a method with incompatible type

class A {

}

class B extends A {

}

class C {
    A getx() {

    }
}

class D extends C {
    Object getx() {

    }
}

{

}